// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A current application For a given snapshot Manifest file in stage It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"my-stage-stack-2\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"my-stage-stack-2.template.json\\"
      },
      \\"metadata\\": {
        \\"/my-stage/stack-2\\": [
          {
            \\"type\\": \\"aws:cdk:asset\\",
            \\"data\\": \\"snapshot-value\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ],
        \\"/my-stage/stack-2/CDKMetadata/Default\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CDKMetadata\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`A current application For a given snapshot Manifest file in top-level It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"assembly-my-stage\\": {
      \\"type\\": \\"cdk:cloud-assembly\\",
      \\"properties\\": {
        \\"directoryName\\": \\"assembly-my-stage\\",
        \\"displayName\\": \\"my-stage\\"
      }
    },
    \\"Tree\\": {
      \\"type\\": \\"cdk:tree\\",
      \\"properties\\": {
        \\"file\\": \\"tree.json\\"
      }
    },
    \\"stack-1\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"stack-1.template.json\\"
      },
      \\"metadata\\": {
        \\"/stack-1\\": [
          {
            \\"type\\": \\"aws:cdk:asset\\",
            \\"data\\": \\"snapshot-value\\"
          }
        ],
        \\"/stack-1/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/stack-1/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/stack-1/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/stack-1/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ],
        \\"/stack-1/CDKMetadata/Default\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CDKMetadata\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`A current application For a given snapshot Template file in stage It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"my-stage/stack-2/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"snapshot-value\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"my-stage/stack-2/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"../asset.2b77dd4d29043dd9ab1cac79d5366fecac15e76461fac5bb7cdff76b831dc5e0\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"my-stage/stack-2/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Parameters\\": {},
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  }
}"
`;

exports[`A current application For a given snapshot Template file in top-level It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"snapshot-value\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Parameters\\": {},
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  }
}"
`;

exports[`Files from a v5 Cloud Assembly Manifest file It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"Tree\\": {
      \\"type\\": \\"cdk:tree\\",
      \\"properties\\": {
        \\"file\\": \\"tree.json\\"
      }
    },
    \\"stack-1\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"stack-1.template.json\\"
      },
      \\"metadata\\": {
        \\"/stack-1\\": [
          {
            \\"type\\": \\"aws:cdk:asset\\",
            \\"data\\": \\"snapshot-value\\"
          }
        ],
        \\"/stack-1/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/stack-1/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/stack-1/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/stack-1/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ]
      }
    }
  },
  \\"runtime\\": {}
}"
`;

exports[`Files from a v5 Cloud Assembly Template file It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"snapshot-value\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Parameters\\": {},
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  }
}"
`;

exports[`Files from a v7 Cloud Assembly Manifest file It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"assembly-my-stage\\": {
      \\"type\\": \\"cdk:cloud-assembly\\",
      \\"properties\\": {
        \\"directoryName\\": \\"assembly-my-stage\\",
        \\"displayName\\": \\"my-stage\\"
      }
    },
    \\"Tree\\": {
      \\"type\\": \\"cdk:tree\\",
      \\"properties\\": {
        \\"file\\": \\"tree.json\\"
      }
    },
    \\"stack-1\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"stack-1.template.json\\"
      },
      \\"metadata\\": {
        \\"/stack-1\\": [
          {
            \\"type\\": \\"aws:cdk:asset\\",
            \\"data\\": \\"snapshot-value\\"
          }
        ],
        \\"/stack-1/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/stack-1/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/stack-1/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/stack-1/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ],
        \\"/stack-1/CDKMetadata/Default\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CDKMetadata\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`Files from a v7 Cloud Assembly Template file It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"snapshot-value\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Parameters\\": {},
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  }
}"
`;
